<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="@color/black_default"
    android:dividerPadding="@dimen/default_listview_divide"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:showDividers="beginning" >

    <TextView
        android:id="@+id/device_name"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_device_name"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/update_date"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_update_time"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_1"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_2"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_2"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_3"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_3"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_4"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_4"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_5"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_5"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_6"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_6"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_7"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_7"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_8"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_8"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_9"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_9"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_10"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_10"
        android:textSize="@dimen/default_item_tv_sp_size" />

    <TextView
        android:id="@+id/data_11"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical"
        android:text="@string/item_msg_data_11"
        android:textSize="@dimen/default_item_tv_sp_size" />

</LinearLayout>