<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/delay_button_height_default"
        android:hint="@string/hint_register_name"
        android:inputType="textPersonName"
        android:maxEms="20"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_pwd_old"
        android:layout_width="match_parent"
        android:layout_height="@dimen/delay_button_height_default"
        android:hint="@string/hint_regsiter_old_pwd"
        android:inputType="textPassword"
        android:minEms="6"
        android:singleLine="true" />

    <EditText
        android:id="@+id/et_pwd_new"
        android:layout_width="match_parent"
        android:layout_height="@dimen/delay_button_height_default"
        android:hint="@string/hint_regsiter_new_pwd"
        android:inputType="textPassword"
        android:minEms="6"
        android:singleLine="true" />

</LinearLayout>