<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:actionbar="http://schemas.android.com/apk/res/com.ruixun"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_index_bg"
    android:orientation="vertical" >

    <com.ruixun.widget.ActionBar_
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        actionbar:left_enable="true"
        actionbar:right_enable="false" >
    </com.ruixun.widget.ActionBar_>

    <EditText
        android:id="@+id/et_devicename"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:background="@drawable/rectancle_back"
        android:gravity="top"
        android:hint="@string/create_devicename"
        android:padding="5dip" />

    <EditText
        android:id="@+id/et_devicedes"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="2"
        android:background="@drawable/rectancle_back"
        android:gravity="top"
        android:hint="@string/create_devicedes"
        android:padding="5dip" />

    <com.ruixun.widget.DelayButton_
        android:id="@+id/control_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/delay_button_height_default"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="9dip"
        android:layout_marginRight="9dip"
        android:background="@drawable/btn_bottombar"
        android:text="@string/create_device"
        android:textColor="@color/profile_bottom_text_color" />

</LinearLayout>