<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:actionbar="http://schemas.android.com/apk/res/com.ruixun"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_index_bg"
    android:orientation="vertical" >

    <com.ruixun.widget.ActionBar_
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        actionbar:left_enable="true"
        actionbar:right_enable="false" >
    </com.ruixun.widget.ActionBar_>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        tools:ignore="DisableBaselineAlignment" >

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" >

            <TextView
                android:id="@+id/chaxun"
                android:layout_width="@dimen/round_back_rinus"
                android:layout_height="@dimen/round_back_rinus"
                android:layout_gravity="center"
                android:background="@drawable/tv_round_back_selector"
                android:gravity="center"
                android:text="@string/cha_xun" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/fenxi"
                android:layout_width="@dimen/round_back_rinus"
                android:layout_height="@dimen/round_back_rinus"
                android:layout_gravity="center"
                android:background="@drawable/tv_round_back_selector"
                android:gravity="center"
                android:text="@string/fen_xi" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/pingjia"
                android:layout_width="@dimen/round_back_rinus"
                android:layout_height="@dimen/round_back_rinus"
                android:layout_gravity="center"
                android:background="@drawable/tv_round_back_selector"
                android:gravity="center"
                android:text="@string/ping_jia" />
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/controller_container"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="3.8" >

        <!-- <lecho.lib.hellocharts.view.LineChartView -->
        <!-- android:id="@+id/charts_view" -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="match_parent" -->
        <!-- android:layout_margin="@dimen/activity_horizontal_margin" -->
        <!-- android:background="#32CD32" -->
        <!-- android:visibility="gone" /> -->


        <!-- <com.ruixun.widget.SwipeRefreshUpAndDownLayout_ -->
        <!-- android:id="@+id/swipe" -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="match_parent" -->
        <!-- android:layout_margin="@dimen/activity_horizontal_margin" -->
        <!-- android:background="@drawable/rectancle_back" > -->


        <!-- <ListView -->
        <!-- android:id="@+id/msg_listview" -->
        <!-- android:layout_width="match_parent" -->
        <!-- android:layout_height="match_parent" -->
        <!-- android:background="@color/transparent" > -->
        <!-- </ListView> -->
        <!-- </com.ruixun.widget.SwipeRefreshUpAndDownLayout_> -->
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.1" >

        <com.ruixun.widget.ItemControlle_
            android:id="@+id/item_1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_weight="1"
            android:visibility="gone"
            tools:ignore="NestedWeights" />

        <com.ruixun.widget.ItemControlle_
            android:id="@+id/item_2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:visibility="gone"
            android:layout_weight="1" />

        <com.ruixun.widget.ItemControlle_
            android:id="@+id/item_3"
            android:visibility="gone"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>